@@ -1,4 +1,0 @@
-~DTD{
-  ~meat_locker{int}
-  ~start_room{int}
-}
