@@ -1,2 +1,0 @@
-~start_room{300}
-~meat_locker{1}
